Closed Bug 1321946 Opened 9 years ago Closed 9 years ago

Assertion failure: aNewProgress & (FLAG_SIZE_AVAILABLE | FLAG_HAS_ERROR), at ProgressTracker.cpp:41

Categories

(Core :: Graphics: ImageLib, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox53 --- fixed

People

(Reporter: tnikkel, Assigned: tnikkel)

Details

Attachments

(1 file, 1 obsolete file)

If the first part image of a multipart image is damaged and we can't decode a size from it we trigger this assertion.
Attached patch patch (obsolete) — Splinter Review
Attachment #8816655 - Flags: review?(aosmond)
Attached patch patch v2Splinter Review
Noticed a place where error progress can be propagated.
Attachment #8816655 - Attachment is obsolete: true
Attachment #8816655 - Flags: review?(aosmond)
Attachment #8816661 - Flags: review?(aosmond)
Comment on attachment 8816661 [details] [diff] [review] patch v2 Review of attachment 8816661 [details] [diff] [review]: ----------------------------------------------------------------- LGTM.
Attachment #8816661 - Flags: review?(aosmond) → review+
Pushed by tnikkel@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/6520346b0a23 Adjust asserts about the progress of an image to deal with how multipart images are handled. r=aosmond
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: